find_account: Fix problematic line-wrapping.

--- a/static/styles/portico-signin.css
+++ b/static/styles/portico-signin.css
@@ -123,7 +123,7 @@ html {
 }
 
 .app-main.find-account-page-container {
-    width: 456px;
+    width: 500px;
     font-weight: 400;
 }
 
